ibuilder/tests/not_compile/hidden_no_default.stderr
error: a default value is required for hidden fields
 --> $DIR/hidden_no_default.rs:5:5
  |
5 | /     #[ibuilder(hidden)]
6 | |     field: i64,
  | |______________^
